validate and create templates deployments apis
