# backend/internal/routes/routes.go
@@ -143,5 +143,7 @@ func setupTemplateRoutes(api *gin.RouterGroup, h *handlers.Handlers) {
 	{
 		templateRoutes.GET("/", h.TemplatesHandlers().GetTemplatesList)
 		templateRoutes.GET("/:name", h.TemplatesHandlers().GetTemplate)
+		templateRoutes.POST("/:id/validate/:instance_name", h.TemplatesHandlers().ValidateTemplate)
+		templateRoutes.POST("/:id/apply/:instance_name", h.TemplatesHandlers().ApplyTemplate)
 	}
 }
